# WhatsappDaily

./: .gitignore  README.md
daily-summary/: Dockerfile  main.py  railway.toml
intelligence-core/: DEPLOY.md  Dockerfile  pyproject.toml  railway.toml
intelligence-core/src/: config.py  main.py
intelligence-core/src/collectors/: base.py  whatsapp.py
intelligence-core/src/delivery/: whatsapp.py
intelligence-core/src/memory/: bank.py  index.py  updater.py
intelligence-core/src/models/: events.py
intelligence-core/src/synthesis/: classifier.py  engine.py  formatter.py  prompts.py
whatsapp-bridge/: Dockerfile  go.mod  go.sum  main.go  railway.toml
