[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intelligence-core"
version = "2.0.0"
description = "Multi-source intelligence platform for daily briefings"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[project.optional-dependencies]
gmail = ["google-api-python-client>=2.0.0", "google-auth-oauthlib>=1.0.0"]
slack = ["slack-sdk>=3.0.0"]
github = ["PyGithub>=2.0.0"]
notion = ["notion-client>=2.0.0"]
all = [
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "slack-sdk>=3.0.0",
    "PyGithub>=2.0.0",
    "notion-client>=2.0.0",
]
